# wasi-cmake-demo

./: .gitignore  CMakeLists.txt  README.md  build.bat  index.html  index.js  package.json  wasi-fd.js  wasi-impl.js  wasi-rights.js  wasi-types.js  wasi.js  webpack.config.js  webpack.html
src/: asyncify.js  base64.h  init.js  main.c  main.js  malloc.c  wrap.js
src/asyncify/: asyncify.html  asyncify.js
webpack/: a.js  index.html  main.js
